Resolve error label tag and modify primary app primary color

--- a/front/app-citas-medicas/src/index.css
+++ b/front/app-citas-medicas/src/index.css
@@ -1,6 +1,7 @@
 :root
 {
-  --color-primary: #09E5AB;
+  /*--color-primary: #09E5AB;*/
+  --color-primary: #07a97e;
   --color-primary-dark:#03654b;
   --color-bg-primary: #FFF;
 
