--- a/front/app-citas-medicas/src/pages/logger/Logger.css
+++ b/front/app-citas-medicas/src/pages/logger/Logger.css
@@ -10,6 +10,7 @@
 }
 
 #login > span{
+    color: var(--font-color-text);
     font-size: 12px;
     margin-top: 3em;
 }
@@ -43,9 +44,10 @@
 }
 
 #login div.container span{
+    padding: 0 1.25em 1.25em 1.25em;
     text-align: center;
     font-size: 12px;
-    padding: 0 1.25em 1.25em 1.25em;
+    color: var(--font-color-text)
 }
 
 #login div.container h3
@@ -62,28 +64,32 @@
     height: 50px;
 }
 
-#login .form-group .form-control{
+#login .form-group .form-control
+{
     height: 50px;
     width: 100%;
     padding: 21px 12px 6px;
     border : none;
     border-bottom: 1px solid #DDD;
-    
+    background-color: var(--color-bg-primary);
+    color: var(--font-color-text)
 }
 
 #login .form-group .form-label {
-    font-size: 14px;
-    font-weight: 400;
-    pointer-events: none;
     position: absolute;
+    left: 12px;
+    top: -8px;
+    margin-bottom: 0;
+
+    pointer-events: none;  
     transform: translate3d(0, 22px, 0) scale(1);
     transform-origin: left top;
     transition: 240ms;
-    left: 12px;
-    top: -8px;
-    z-index: 1;
+        
     color: #b8b8b8;
-    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    z-index: 1;
 }
 
 #login .form-group .form-control:focus
